finished home page

--- a/test.css
+++ b/test.css
@@ -96,3 +96,68 @@ accordion-container {
 img {
   filter: brightness(0) invert(1);
 }
+
+opt-form {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  margin-top: 20px;
+  flex-wrap: wrap;
+
+  @media (max-width: 1000px) {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+opt-form-input {
+  max-width: 450px;
+  width: 100%;
+  border: 0;
+  padding: 10px;
+  height: 70;
+  box-sizing: border-box;
+}
+
+.opt-form-button {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  background: #e50914;
+  color: white;
+  text-transform: uppercase;
+  padding: 0.32px;
+}
+
+button {
+  display: block;
+  background-color: #e50914;
+  width: 84px;
+  height: fit-content;
+  color: white;
+  border: 0;
+  font-size: 15px;
+  border-radius: 3px;
+  padding: 8px 17px;
+  cursor: pointer;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+
+header-logo {
+  height: 32px;
+  width: 108px;
+  margin-right: 40px;
+
+  @media (min-width: 1449px) {
+    height: 45px;
+    width: 167px;
+  }
+}
+
+/* .header-background {
+  display: flex;
+  flex-direction: column;
+	background: url(${({ src }) => (src ? `../images/misc/${src}.jpg` : '../images/misc/home-bg.jpg')}) top left / cover
+	no-repeat;
+} */
